feat: init setting

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "with-tailwind",
+  "name": "chora-monorepo",
   "private": true,
   "scripts": {
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "check-types": "turbo run check-types",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "dev:web": "pnpm --filter=\"web\" dev"
   },
   "devDependencies": {
     "prettier": "^3.5.0",
