--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "exports": {
-    ".": "./tailwind.config.ts"
+    ".": "./tailwind.config.ts",
+    "./shared.css": "./shared.css"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
