--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,9 +8,10 @@
     "dist"
   ],
   "exports": {
-    "./styles.css": "./src/styles.css",
+    "./styles.css": "./dist/index.css",
+    "./dev-styles.css": "./src/styles.css",
     "./*": "./src/*.tsx",
-    "./utils/cn": "./src/utils/cn.ts"
+    "./tailwind.config": "./tailwind.config.ts"
   },
   "license": "MIT",
   "scripts": {
@@ -26,13 +27,11 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/react": "^19.0.7",
+    "@types/react": "^19.0.10",
     "autoprefixer": "^10.4.20",
-    "clsx": "^2.1.1",
     "eslint": "^9.21.0",
-    "postcss": "^8.5.1",
-    "tailwind-merge": "^3.0.2",
+    "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.7.3"
+    "typescript": "5.8.2"
   }
 }
